--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -570,3 +570,43 @@ if( TESTS )
 	add_subdirectory( source/test_ith )
 
 endif( TESTS )
+
+# Click packaging
+
+
+execute_process(
+    COMMAND dpkg-architecture -qDEB_HOST_MULTIARCH
+    OUTPUT_VARIABLE ARCH_TRIPLET
+    OUTPUT_STRIP_TRAILING_WHITESPACE
+)
+set(QT_IMPORTS_DIR "lib/${ARCH_TRIPLET}")
+
+set(PROJECT_NAME "shrew-qt5")
+set(FULL_PROJECT_NAME "shrew-qt5.fredldotme")
+set(DATA_DIR /)
+set(DESKTOP_FILE_NAME ${PROJECT_NAME}.desktop)
+
+# This command figures out the minimum SDK framework for use in the manifest
+# file via the environment variable provided by Clickable or sets a default value otherwise.
+if(DEFINED ENV{SDK_FRAMEWORK})
+    set(CLICK_FRAMEWORK "$ENV{SDK_FRAMEWORK}")
+else()
+    set(CLICK_FRAMEWORK "ubuntu-sdk-16.04.3")
+endif()
+
+# This figures out the target architecture for use in the manifest file.
+if(DEFINED ENV{ARCH})
+    set(CLICK_ARCH "$ENV{ARCH}")
+else()
+    execute_process(
+        COMMAND dpkg-architecture -qDEB_HOST_ARCH
+        OUTPUT_VARIABLE CLICK_ARCH
+        OUTPUT_STRIP_TRAILING_WHITESPACE
+    )
+endif()
+
+configure_file(manifest.json.in ${CMAKE_CURRENT_BINARY_DIR}/manifest.json)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/manifest.json DESTINATION ${CMAKE_INSTALL_PREFIX})
+install(FILES ${PROJECT_NAME}.apparmor DESTINATION ${DATA_DIR})
+install(FILES source/qikec/png/ikec.png DESTINATION assets)
+
