clickable: Include flex, bison & libssl-dev
Adds missing target dependencies.

--- a/clickable.yaml
+++ b/clickable.yaml
@@ -2,4 +2,7 @@ clickable_minimum_required: 7.1.2
 builder: cmake
 kill: qikec
 dependencies_target:
+  - flex
+  - bison
   - libedit-dev
+  - libssl-dev
