--- a/shrew-qt5.desktop.in
+++ b/shrew-qt5.desktop.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
 _Name=Shrew Soft VPN
 Exec=qikec %U
-Icon=assets/logo.svg
+Icon=assets/ikec.png
 Terminal=false
 Type=Application
 X-Ubuntu-Touch=true
