source: Pick up generated UI headers

--- a/source/qikea/CMakeLists.txt
+++ b/source/qikea/CMakeLists.txt
@@ -14,6 +14,7 @@ include_directories(
 	${IKE_SOURCE_DIR}/source/libidb
 	${IKE_SOURCE_DIR}/source/libith
 	${IKE_SOURCE_DIR}/source/liblog
+	${CMAKE_CURRENT_BINARY_DIR}
 	${Qt5Widgets_INCLUDES} )
 
 link_directories(
