--- a/source/qikec/CMakeLists.txt
+++ b/source/qikec/CMakeLists.txt
@@ -16,6 +16,7 @@ include_directories(
 	${IKE_SOURCE_DIR}/source/libith
 	${IKE_SOURCE_DIR}/source/liblog
 	${IKE_SOURCE_DIR}/source/libip
+	${CMAKE_CURRENT_BINARY_DIR}
 	${Qt5Widgets_INCLUDES} )
 
 link_directories(
